whisply-rs/tui/src/chatwidget/snapshots/whisply_tui__chatwidget__tests__memories_settings_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Memories
  Choose how Whisply uses and creates memories. Changes are saved to config.to

› [x] Use memories       Use memories in the following threads. Applied at
                         next thread.
  [ ] Generate memories  Generate memories from the following threads. Current
                         thread included.
  Reset all memories     Clear local memory files and summaries. Existing
                         threads stay intact.

  Memories are stored on this Mac.

  Press space to toggle; enter to save or select
